# Positron-EDR

./: Cargo.toml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/alert/: mod.rs
agent/src/detect/: heuristics.rs  mod.rs  signatures.rs
agent/src/normalize/: mod.rs  schemas.rs  test.rs
agent/src/response/: mod.rs
agent/src/telemetry/: file.rs  mod.rs  network.rs  process.rs  registry.rs
