[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.29.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sha2 = "0.10"
walkdir = "2.5.0"
hex = "0.4"
users = "0.11"
netstat2 = "0.9"
winapi = "0.3.9"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }
winreg = "0.10"
yara = "0.14"
rayon = "1.8"